# cpp17std

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: SetupDoxygen.cmake  SetupGoogleTests.cmake  SetupInstallDirs.cmake  UpdateProduce.cmake
cmake/sources/: current_build.c
cmake/template/: gtest.cmake.in  project.h.in
docs/: CMakeLists.txt  Doxyfile
include/: classes.h  project.h
src/: CMakeLists.txt  main.cpp
src/structural_bindings/: CMakeLists.txt  structural_bindings.cpp  structural_bindings.h
tests/: CMakeLists.txt  test_structural_bindings.cpp
